--- a/.editorconfig
+++ b/.editorconfig
@@ -8,5 +8,9 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+[*.yml]
+indent_style = space
+indent_size = 2
+
 [gradlew.bat]
 end_of_line = crlf
