--- a/data-service/src/main/resources/application.yml
+++ b/data-service/src/main/resources/application.yml
@@ -4,6 +4,12 @@ logging:
   level:
 #    root: debug
 #    org.hibernate.SQL: TRACE
+    org.hibernate.type: TRACE
+    com.example: DEBUG
+endpoints:
+  default:
+    web:
+      enabled: true
 spring:
   application:
     name: data-service
@@ -16,11 +22,12 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5Dialect
     show-sql: true
     hibernate:
-      ddl-auto: update
-#      ddl-auto: create
+      ddl-auto: create    # create, update, validate
 #      use-new-id-generator-mappings: false
     properties:
       hibernate:
+        format_sql: true
+        use_sql_comments: true
         jdbc:
           time_zone: UTC
 jwt:
