--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,11 @@ services:
       - MYSQL_DATABASE=demo
       - MYSQL_USER=dbuser
       - MYSQL_PASSWORD=dbp4ss
+    networks:
+      - reactnet
 
-  data-service:
-    image: reactive-security/data-service:0.1.0-SNAPSHOT
+  auth-service:
+    image: reactive-security/auth-service:0.1.0-SNAPSHOT
     ports:
       - 8081:8080
     environment:
@@ -24,14 +26,32 @@ services:
       - DATABASE_NAME=demo
       - DATABASE_PORT=3306
     networks:
-      - reactive-network
+      - reactnet
+    links:
+      - mysql
+    depends_on:
+      - mysql
+
+  data-service:
+    image: reactive-security/data-service:0.1.0-SNAPSHOT
+    ports:
+      - 8080:8080
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
+      - DATABASE_HOST=mysql
+      - DATABASE_USER=dbuser
+      - DATABASE_PASSWORD=dbp4ss
+      - DATABASE_NAME=demo
+      - DATABASE_PORT=3306
+    networks:
+      - reactnet
     links:
       - mysql
     depends_on:
       - mysql
 
 networks:
-  reactive-network:
+  reactnet:
     driver: bridge
 
 volumes:
