--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ description=Security Showcase Apps
 version=0.1.0-SNAPSHOT
 
 # kotlin
-kotlinVersion=1.1.4
+kotlinVersion=1.1.4-3
 spekVersion=1.0.89
 mockitoVersion=2.1.0-beta.125
 mockitoKotlinVersion=0.6.1
@@ -25,7 +25,6 @@ bootstrapVersion=3.3.7
 highchartsVersion=5.0.8
 xtermVersion=2.9.2
 
-
 # kafka
 kafkaVersion=0.11.0.0
 avroVersion=1.7.7
@@ -40,11 +39,7 @@ influxdbJavaVersion=2.8-SNAPSHOT
 micrometerVersion=latest.release
 
 # gradle
-gradleWrapperVersion=4.0.2
-#gradleWrapperVersion=4.1
+gradleWrapperVersion=4.2
 
 # docker
 dockerPluginVersion=0.13.0
-
-org.gradle.script.lang.kotlin.accessors.auto=true
-# remove this after gradle-kotlin-dsl 0.10.3
